fix lint and logger slashes

--- a/src/http/any-catchall/app-core/package.json
+++ b/src/http/any-catchall/app-core/package.json
@@ -20,6 +20,9 @@
   "eslintConfig": {
     "parserOptions": {
       "sourceType": "module"
-    }
+    },
+    "ignorePatterns": [
+      "test/mocks/**"
+    ]
   }
 }
