mount core with loader in enhance actual

--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
   },
   "eslintConfig": {
     "extends": "@architect/eslint-config",
+    "parserOptions": {
+      "ecmaVersion": 2022
+    },
     "overrides": [
       {
         "files": [
