--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "exports": {
     ".": "./src/plugins/beginner.js",
     "./src/http/any-catchall/index.mjs": "./src/http/any-catchall/index.mjs",
-    "./src/http/any-catchall/router.mjs": "./src/http/any-catchall/router.mjs"
+    "./src/http/any-catchall/router.mjs": "./src/http/any-catchall/router.mjs",
+    "app-core": "./app-core",
+    "app-loader": "./app-loader"
   },
   "license": "Apache-2.0",
   "homepage": "https://enhance.dev",
@@ -29,6 +31,8 @@
     "models/*",
     "src/*",
     "public/*",
+    "app-core",
+    "app-loader",
     ".arc"
   ],
   "dependencies": {
